# blinky-led

./: .env  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LAUNCH_CLOCK.md  LICENSE  README.md  config.example.yaml  config2.yaml  default.env  entrypoint.sh  example.env  ping_binance.sh  pyproject.toml  requirements.txt  setup.py
.github/: .copilot-instructions.md
BlinkyLED/: cli.py
BlinkyLED/commands/: cmd_init.py  cmd_status.py
app/: README.md  __init__.py  binance.py  blinkybase.py  cli.py  led_master.py  led_master_0.0.4.py  led_v2.py  runtime.py  touch_gui_xset.sh
app/core/: __init__.py  cache.py  config.py  logging.py  market_data.py  models.py  scheduler.py  settings.py
app/pages/: __init__.py  page_builder.py  rotation.py
app/providers/: __init__.py  base.py  crypto.py  gas.py  markets.py  news.py  polls.py
app/render/: __init__.py  font_helpers.py  layout_engine.py  piomatter.py  primitives.py  renderer.py  simulator.py  ticker.py
app/services/: __init__.py  config_store.py  headlines.py  health.py  http.py  market_data.py
app/web/: __init__.py  schemas.py  server.py
app/widgets/: __init__.py  base.py  clock.py  crypto.py  custom_text.py  factory.py  futures.py  gas.py  markets.py  news.py  (+4 more)
blinky/: cli.py  config.py
docs/: DEPLOY_PI5_PIOMATTER.md  DEVELOPMENT_SIMULATOR.md  MIGRATION_V3.md
tests/: test_api.py  test_cache.py  test_config.py  test_config_write_api.py  test_page_enablement.py  test_providers.py  test_rotation.py  test_scheduler_widget_runtime.py  test_simulator_render.py  test_widget_run_modes.py  test_widgets.py
(+36 files in other folders)
